Vulnerable packages fix

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ dist
 .cache
 .DS_Store
 .prettierrc
+forkify-architecture-recipe-loading
+forkify-flowchart-part-1
+forkify-flowchart-part-2
+forkify-flowchart-part-3
