Vulnerable packages fix

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ dist
 .parcel-cache
 .DS_Store
 .prettierrc
-forkify-architecture-recipe-loading
-forkify-flowchart-part-1
-forkify-flowchart-part-2
-forkify-flowchart-part-3
+forkify-architecture-recipe-loading.png
+forkify-flowchart-part-1.png
+forkify-flowchart-part-2.png
+forkify-flowchart-part-3.png
